1.0.3: Make Zabuton Dispensable